--- a/src/data/use_case_rules/use_case_type_config.json
+++ b/src/data/use_case_rules/use_case_type_config.json
@@ -10,7 +10,7 @@
     "pickTwoPersonasRate": 0.3
   },
   {
-    "useCaseType": "Daily Life Support",
+    "useCaseType": "Daily Life Support (Assistive Tech, Smart Home, IoT, or Public Services)",
     "requiredUserGroups": ["Older Adults"],
     "optionalUserGroups": ["Caregivers and Medical Staff"],
     "requiredPillars": ["Pillar 1 - User-Driven Interaction Assistant"],
@@ -20,7 +20,7 @@
     "pickTwoPersonasRate": 0.3
   },
   {
-    "useCaseType": "Health Monitoring",
+    "useCaseType": "Health Monitoring (Wearables, Sensors)",
     "requiredUserGroups": ["Older Adults"],
     "optionalUserGroups": ["Caregivers and Medical Staff"],
     "requiredPillars": ["Pillar 3 - Effective & Personalized Care"],
@@ -30,13 +30,33 @@
     "pickTwoPersonasRate": 0.3
   },
   {
-    "useCaseType": "Social Enrichment",
+    "useCaseType": "Cognitive Engagement & Stimulation (Gaming)",
+    "requiredUserGroups": ["Older Adults"],
+    "optionalUserGroups": ["Caregivers and Medical Staff"],
+    "requiredPillars": ["Pillar 4 - Physical & Cognitive Impairments Prevention"],
+    "optionalPillars": ["Pillar 1 - User-Driven Interaction Assistant", "Pillar 2 - Personalized Social Inclusion"],
+    "min": 1,
+    "max": 3,
+    "pickTwoPersonasRate": 0.3
+  },
+  {
+    "useCaseType": "Wellbeing & Lifestyle Optimization (Nutrition, Fitness)",
+    "requiredUserGroups": ["Older Adults"],
+    "optionalUserGroups": ["Caregivers and Medical Staff"],
+    "requiredPillars": ["Pillar 4 - Physical & Cognitive Impairments Prevention", "Pillar 2 - Personalized Social Inclusion"],
+    "optionalPillars": ["General Requirements"],
+    "min": 1,
+    "max": 2,
+    "pickTwoPersonasRate": 0.3
+  },
+  {
+    "useCaseType": "Social Enrichment (Social Media, Communication)",
     "requiredUserGroups": ["Older Adults"],
     "optionalUserGroups": ["Caregivers and Medical Staff"],
     "requiredPillars": ["Pillar 2 - Personalized Social Inclusion"],
     "optionalPillars": ["Pillar 1 - User-Driven Interaction Assistant", "Pillar 4 - Physical & Cognitive Impairments Prevention"],
     "min": 1,
-    "max": 3,
+    "max": 2,
     "pickTwoPersonasRate": 0.3
   },
   {
@@ -50,13 +70,13 @@
     "pickTwoPersonasRate": 0.3
   },
   {
-    "useCaseType": "Trust & Privacy Negotiation",
+    "useCaseType": "Trust & Privacy Negotiation (Sensor Data, Data Sharing)",
     "requiredUserGroups": ["Older Adults"],
     "optionalUserGroups": ["Caregivers and Medical Staff"],
     "requiredPillars": ["General Requirements"],
     "optionalPillars": ["Pillar 1 - User-Driven Interaction Assistant", "Pillar 2 - Personalized Social Inclusion"],
     "min": 1,
-    "max": 1,
+    "max": 2,
     "pickTwoPersonasRate": 0.3
   },
   {
