--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-009.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-009.json
@@ -4,11 +4,10 @@
     {
       "personaId": "P-005",
       "tasks": [
-        "Insists on ALFRED using polite, formal, and transactional language during interactions",
-        "Mutters complaints about overzealous reminders for difficult exercises",
-        "Relies grudgingly on ALFRED's gentle prompts to drink water and remind of appointments",
-        "Experiences feelings of isolation due to the cold and formal communication style of ALFRED",
-        "Balances necessity of monitoring with strong desire to maintain privacy and autonomy"
+        "Feels empowered rather than surveilled by ALFREDs discreet supervision",
+        "Resists dependency and maintains dignity during system use",
+        "Grows to appreciate a tentative rhythm balancing privacy with personalized care",
+        "Frustrates caregiver by restricting real-time data sharing"
       ]
     }
   ]
