--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-011.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-011.json
@@ -4,11 +4,8 @@
     {
       "personaId": "P-005",
       "tasks": [
-        "Ignores or postpones ALFRED's reminders about preparing for bus rides",
-        "Experiences mild irritation and skepticism towards unsolicited system prompts",
-        "Resists adapting to suggested support despite recognizing the need for supervision",
-        "Balances desire for independence with underlying need for recovery support",
-        "Accepts system assistance only on her own terms and timing"
+        "Activates voice commands only when feeling ready by pressing the push-to-talk button deliberately",
+        "Prefers functional use of ALFRED without extra features or proactive assistance"
       ]
     }
   ]
