--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-007.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-007.json
@@ -2,28 +2,31 @@
   "useCaseId": "UC-007",
   "tasksByPersona": [
     {
-      "personaId": "P-004",
+      "personaId": "P-005",
       "tasks": [
-        "Accesses only validated, urgent health data from ALFRED",
-        "Relies on ALFRED's filtering to reduce notification overload",
-        "Avoids engaging with emotional or playful system interactions",
-        "Focuses strictly on clinical facts when reviewing patient data",
-        "Monitors Olivia's vital signs remotely through ALFRED",
-        "Prefers concise and prioritized health alerts to manage workload"
+        "Ensures wearable sensors quietly track vital signs without disturbances"
       ]
     },
     {
       "personaId": "P-006",
       "tasks": [
-        "Supports Olivia's engagement by fostering openness through ALFRED"
+        "Encourages Olivia to participate in social and cognitive activities",
+        "Avoids reliance on automatic recordings to prevent workflow complications",
+        "Balances respecting clients' privacy preferences with desire for open communication",
+        "Juggles multitasking across clients while staying responsive via ALFRED",
+        "Navigates tension between formal privacy demands and fostering emotional bonds"
       ]
     },
     {
-      "personaId": "P-005",
+      "personaId": "P-004",
       "tasks": [
-        "Responds coolly and dismissively to ALFRED's reminders and check-ins",
-        "Prefers offline communication over system-mediated interactions",
-        "Guards personal health data carefully, even from medical staff"
+        "Sets ALFRED to block all non-critical notifications during work hours",
+        "Monitors Olivias vital data focusing only on urgent alerts",
+        "Accesses validated health trends quickly without distraction",
+        "Avoids interacting with non-clinical ALFRED features outside official hours",
+        "Demands a streamlined, clinical interface for receiving sensor alerts",
+        "Expresses frustration when privacy settings delay access to important health data",
+        "Relies on ALFRED to prevent missed emergencies through tailored alert filtering"
       ]
     }
   ]
