--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-010.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-010.json
@@ -4,19 +4,19 @@
     {
       "personaId": "P-002",
       "tasks": [
-        "Puts on the lightweight ALFRED-enabled wristband at the start of the day",
-        "Moves around the apartment while the wristband tracks heart rate and step count",
-        "Listens to ALFRED's conversational reminders to stay hydrated and stretch",
-        "Tells ALFRED to reduce or stop reminders when they feel too rigid",
-        "Asks ALFRED for a new exercise challenge when feeling stagnant",
-        "Accepts real-time feedback from ALFRED celebrating activity milestones",
-        "Adjusts notification settings to avoid feeling overwhelmed by prompts",
-        "Debates internally whether to accept video check-in sessions with a virtual coach",
-        "Agrees to a video check-in after weighing the benefits of accountability",
-        "Personalizes ALFRED's behavior to feel empowered rather than controlled",
-        "Balances use of ALFRED's support with moments of spontaneous, unprompted activity",
-        "Expresses mild resistance or discomfort about being continuously monitored",
-        "Embraces technology out of curiosity and desire to maintain independence despite mobility issues"
+        "Notices the wearable's vibration signal to start the personalized morning exercise",
+        "Evaluates and decides whether to attempt the new balance challenge suggested by ALFRED",
+        "Begins and performs exercises while receiving real-time feedback from ALFRED",
+        "Responds to ALFRED's suggestion to take a short rest during exercise",
+        "Engages in spontaneous conversations initiated by ALFRED regarding her motivation and physical activity",
+        "Replies honestly and humorously to ALFRED's inquiries about her feelings toward exercise",
+        "Accepts and attempts a step-count challenge proposed by ALFRED to boost motivation",
+        "Manages and controls data sharing preferences regarding her health information",
+        "Appreciates and expects ALFRED's tone to be informal and encouraging rather than strict",
+        "Feels reassured by ALFRED's attentiveness and personalized guidance rather than preset routines",
+        "Balances desire to push physical limits with realistic acceptance of her mild mobility constraints",
+        "Uses ALFRED to maintain spontaneous, natural interactions integrated into her daily routine",
+        "Values transparency and full visibility of her health data provided by the system"
       ]
     }
   ]
