--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-013.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-013.json
@@ -4,26 +4,22 @@
     {
       "personaId": "P-004",
       "tasks": [
-        "Arrives to perform initial ALFRED system setup for Olivia",
-        "Suggests enabling video check-ins to monitor Olivia remotely",
-        "Respects Olivia's preferences to operate ALFRED only on her command",
-        "Adapts care approach based on limited real-time data availability",
-        "Balances efficiency needs with Olivia's strict privacy requirements",
-        "Negotiates notification settings to minimize unsolicited interruptions"
+        "Prefers minimal and efficient system interactions without friendly explanations",
+        "Rejects features encouraging emotional engagement"
       ]
     },
     {
       "personaId": "P-006",
       "tasks": [
-        "Joins Olivia's ALFRED setup via video call to assist remotely",
-        "Balances nurturing approach with Olivia's guarded and formal communication style",
-        "Plans to maintain support without overwhelming Olivia"
+        "Plans and coordinates fun activities remotely using the system",
+        "Wants to be notified regardless of the hour",
+        "Seeks flexibility in system settings to support multiple clients"
       ]
     },
     {
       "personaId": "P-005",
       "tasks": [
-        "Operates ALFRED strictly on her own voice commands"
+        "Maintains strict control over all ALFRED behaviors and settings"
       ]
     }
   ]
